# lang-bridge

./: README.md
c-rust/src/: main.rs
cpp-rust/: build.rs
rust-c/: Cargo.toml  Makefile  build.rs  main.c
rust-c/src/: lib.rs
rust-py/: Cargo.toml
use-c-from-rust/: Cargo.toml  build.rs  foo.c
use-cpp-from-rust/: Cargo.toml
use-llvm-from-rust/: Cargo.toml  Makefile  hello.c
use-llvm-from-rust/src/: main.rs
use-py-from-rust/: Cargo.toml
use-rust-from-cpp/: demo.cc
use-rust-from-py/tests/: test.py
