[package]
name = "cpp-rust"
version = "0.1.0"
authors = ["Klas Segeljakt <klasseg@kth.se>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cxx = "0.1.2"
# link-cplusplus = "1.0"
# link-cplusplus = { version = "1.0", features = ["libcxx"] }
link-cplusplus = { version = "1.0", features = ["libstdcxx"] }

[build-dependencies]
cxx = "0.1.2"
# link-cplusplus = "1.0"
# link-cplusplus = { version = "1.0", features = ["libcxx"] }
link-cplusplus = { version = "1.0", features = ["libstdcxx"] }
